# home

./: .gitignore  README.md  install.sh
assets/: cmdline.txt  config.txt  environment  pyrequirements.txt  rndisloader.service
modules/: config.py  dbprotect.py  testmodule.py
modules/builder/: __init__.py  cmake.py
modules/connectedpc/: __init__.py
modules/notifications/: __init__.py  dbm.py
modules/wifi/: __init__.py  dbm.py
startup/: modules  rndisloader.py
usbclient/source/windows/default/v1.0.0/: CMakeLists.txt  ssh.cpp  ssh.h  tcpmodule.cpp  tcpmodule.h  usbclient.cpp  usbclient.manifest  usbclient.rc  utils.cpp  utils.h
usbclient/source/windows/default/v1.0.0/include/: CkSsh.h  CkString.h  chilkatDefs.h  ck_inttypes.h
web/: main.py
web/plugins/builder/: __init__.py
web/plugins/connectedpc/: about.txt  errors.json
web/plugins/ngrok/: __init__.py  about.txt  dbm.py  mngrok.py  pid.py
web/plugins/ngrok/web/: __init__.py
web/plugins/ngrok/web/templates/: forwarder-plugin.html
web/static/css/: bootstrap.min.css  login.css  style.css
web/static/js/: login.js  misc.js  notifications.js  wifi.js
web/templates/: home.html  login.html  module-settings.html  module-wifi-table.html  module-wifi.html
web/templates/develop/: tests.html
web/templates/modules/: footer.html  header.html  notifications.html  sidebar-plugins.html  sidebar.html
